--- a/vignettes/sybil.bib
+++ b/vignettes/sybil.bib
@@ -2,12 +2,48 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Gabriel Gelius-Dietrich at 2012-10-04 17:15:03 +0200 
+%% Created for Gabriel Gelius-Dietrich at 2013-07-29 09:43:52 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Edwards:2002uq,
+	Abstract = {Genome-scale metabolic maps can be reconstructed from annotated genome sequence data, biochemical literature, bioinformatic analysis, and strain-specific information. Flux-balance analysis has been useful for qualitative and quantitative analysis of metabolic reconstructions. In the past, FBA has typically been performed in one growth condition at a time, thus giving a limited view of the metabolic capabilities of a metabolic network. We have broadened the use of FBA to map the optimal metabolic flux distribution onto a single plane, which is defined by the availability of two key substrates. A finite number of qualitatively distinct patterns of metabolic pathway utilization were identified in this plane, dividing it into discrete phases. The characteristics of these distinct phases are interpreted using ratios of shadow prices in the form of isoclines. The isoclines can be used to classify the state of the metabolic network. This methodology gives rise to a "phase plane" analysis of the metabolic genotype-phenotype relation relevant for a range of growth conditions. Phenotype phase planes (PhPPs) were generated for Escherichia coli growth on two carbon sources (acetate and glucose) at all levels of oxygenation, and the resulting optimal metabolic phenotypes were studied. Supplementary information can be downloaded from our website (http://epicurus.che.udel.edu).},
+	Author = {Edwards, Jeremy S and Ramakrishna, Ramprasad and Palsson, Bernhard {\O}},
+	Date-Added = {2013-07-29 07:43:37 +0000},
+	Date-Modified = {2013-07-29 07:43:52 +0000},
+	Journal = {Biotechnol Bioeng},
+	Journal-Full = {Biotechnology and bioengineering},
+	Mesh = {Computational Biology; Data Interpretation, Statistical; Escherichia coli; Genome, Bacterial; Models, Biological; Phenotype},
+	Month = {Jan},
+	Number = {1},
+	Pages = {27--36},
+	Pmid = {11745171},
+	Pst = {ppublish},
+	Title = {Characterizing the metabolic phenotype: a phenotype phase plane analysis},
+	Volume = {77},
+	Year = {2002}}
+
+@article{Edwards:2001fk,
+	Abstract = {A significant goal in the post-genome era is to relate the annotated genome sequence to the physiological functions of a cell. Working from the annotated genome sequence, as well as biochemical and physiological information, it is possible to reconstruct complete metabolic networks. Furthermore, computational methods have been developed to interpret and predict the optimal performance of a metabolic network under a range of growth conditions. We have tested the hypothesis that Escherichia coli uses its metabolism to grow at a maximal rate using the E. coli MG1655 metabolic reconstruction. Based on this hypothesis, we formulated experiments that describe the quantitative relationship between a primary carbon source (acetate or succinate) uptake rate, oxygen uptake rate, and maximal cellular growth rate. We found that the experimental data were consistent with the stated hypothesis, namely that the E. coli metabolic network is optimized to maximize growth under the experimental conditions considered. This study thus demonstrates how the combination of in silico and experimental biology can be used to obtain a quantitative genotype-phenotype relationship for metabolism in bacterial cells.},
+	Author = {Edwards, J S and Ibarra, R U and Palsson, B {\O}},
+	Date-Added = {2013-07-29 07:42:09 +0000},
+	Date-Modified = {2013-07-29 07:42:59 +0000},
+	Doi = {10.1038/84379},
+	Journal = {Nat Biotechnol},
+	Journal-Full = {Nature biotechnology},
+	Mesh = {Acetates; Biological Transport; Computer Simulation; Escherichia coli; Genome, Bacterial; Kinetics; Models, Biological; Oxygen Consumption; Succinates},
+	Month = {Feb},
+	Number = {2},
+	Pages = {125--130},
+	Pmid = {11175725},
+	Pst = {ppublish},
+	Title = {In silico predictions of \emph{Escherichia coli} metabolic capabilities are consistent with experimental data},
+	Volume = {19},
+	Year = {2001},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1038/84379}}
 
 @article{Shlomi:2005fk,
 	Abstract = {Predicting the metabolic state of an organism after a gene knockout is a challenging task, because the regulatory system governs a series of transient metabolic changes that converge to a steady-state condition. Regulatory on/off minimization (ROOM) is a constraint-based algorithm for predicting the metabolic steady state after gene knockouts. It aims to minimize the number of significant flux changes (hence on/off) with respect to the wild type. ROOM is shown to accurately predict steady-state metabolic fluxes that maintain flux linearity, in agreement with experimental flux measurements, and to correctly identify short alternative pathways used for rerouting metabolic flux in response to gene knockouts. ROOM's growth rate and flux predictions are compared with previously suggested algorithms, minimization of metabolic adjustment, and flux balance analysis (FBA). We find that minimization of metabolic adjustment provides accurate predictions for the initial transient growth rates observed during the early postperturbation state, whereas ROOM and FBA more successfully predict final higher steady-state growth rates. Although FBA explicitly maximizes the growth rate, ROOM does not, and only implicitly favors flux distributions having high growth rates. This indicates that, even though the cell has not evolved to cope with specific mutations, regulatory mechanisms aiming to minimize flux changes after genetic perturbations may indeed work to this effect. Further work is needed to identify metrics that characterize the complete trajectory from the initial to the final metabolic steady states after genetic perturbations.},
